# rustlearn

./: .gitignore  Cargo.toml  README.md
.github/workflows/: base_python.yml  base_rust.yml
crates/rustlearn/: Cargo.toml
crates/rustlearn-array/: Cargo.toml  README.md
crates/rustlearn-array/src/: lib.rs  namedarray.rs
crates/rustlearn-errors/: Cargo.toml  README.md
crates/rustlearn-errors/src/: lib.rs
crates/rustlearn-linear-model/: Cargo.toml  README.md
crates/rustlearn-linear-model/src/: lib.rs  types.rs
crates/rustlearn-linear-model/src/ols/: linear_regression.rs  mod.rs  multiple_regression.rs
crates/rustlearn-metrics/: Cargo.toml  README.md
crates/rustlearn-metrics/src/: lib.rs  mean_absolute_error.rs  mean_squared_error.rs  r_2.rs
crates/rustlearn-metrics/src/core/: base.rs
crates/rustlearn-model-selection/: Cargo.toml  README.md
crates/rustlearn-model-selection/src/: lib.rs  types.rs
crates/rustlearn-model-selection/src/train_test_split/: simple.rs
crates/rustlearn-python/: Cargo.toml  README.md
crates/rustlearn-python/src/: errors.rs  exceptions.rs  lib.rs
crates/rustlearn-python/src/array/: mod.rs
crates/rustlearn-python/src/linear_model/: linear_regression.rs  mod.rs  multiple_regression.rs
crates/rustlearn-python/src/metrics/: mean_absolute_error.rs  mean_squared_error.rs  mod.rs  r_2.rs
crates/rustlearn-python/src/model_selection/: mod.rs  simple.rs
crates/rustlearn/src/: prelude.rs
py-rustlearn/: Cargo.toml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-release.txt  tox.ini
py-rustlearn/rustlearn/: __init__.py  exceptions.py  named_array.py
py-rustlearn/rustlearn/linear_model/: __init__.py  linear_regression.py  multiple_regression.py  types.py
py-rustlearn/rustlearn/metrics/: __init__.py  mean_absolute_error.py  mean_squared_error.py  r_2.py
py-rustlearn/rustlearn/model_selection/: __init__.py  simple.py  types.py
py-rustlearn/src/: lib.rs
py-rustlearn/tests/: conftest.py
py-rustlearn/tests/integration/: test_linear_regression_e2e.py
py-rustlearn/tests/unit/: test_metrics.py
py-rustlearn/tests/unit/linear_model/: test_linear_regression.py  test_multiple_linear_regression.py
py-rustlearn/tests/unit/linear_model/fixtures/: simple.json
py-rustlearn/tests/unit/model_selection/: test_simple.py
