[package]
name = "rustlearn-linear-model"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
rustlearn-errors = { workspace = true }
rustlearn-array = { workspace = true }

[dev-dependencies]
rstest = "0.25.0"
assert_float_eq = "1"