[package]
name = "rustlearn-python"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Enable running rust-kit-learn workloads in Python"

[dependencies]
pyo3 = "0.23.3"

rustlearn-errors = { workspace = true }
rustlearn-metrics = { workspace = true }
rustlearn-array = { workspace = true }
rustlearn-linear-model = { workspace = true }
rustlearn-model-selection = { workspace = true }

[dev-dependencies]
rstest = "0.25.0"
assert_float_eq = "1"